discussion/kv_engine/180291/180291_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53657: Notify DCP frontend if cursor jumps into new checkpoint

A new open checkpoint might be created in two code paths:

1. Frontend, queueDirty()
2. Background, checkpoint memory recovery

While at (1) we correctly notify DCP connection, we miss that at (2).
The consequence is that DCP cursors migth get stuck at the empty item
in checkpoints like [e cs), and DCP item remaining stats never dropping
to 0.

Change-Id: I452590e9d9673397644a84590d4c8a54ce58d3b2

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-09-22 08:44:14.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-22 08:48:03.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22928/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22928/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10288/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10288/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30958/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30958/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22556/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22556/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21943/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21943/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23723/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23723/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10387/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10387/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20580/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:182:13: error: unknown type name "StreamNotifyCondition" [clang-diagnostic-error]
            StreamNotifyCondition condition = streamNotifyConditionDefault);
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:182:47: error: use of undeclared identifier "streamNotifyConditionDefault" [clang-diagnostic-error]
            StreamNotifyCondition condition = streamNotifyConditionDefault);
                                              ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20580/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:182:13:
error: unknown type name "StreamNotifyCondition" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20580/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19805/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
